--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">Blink233.GitHub.io</h1>
+      <h1 class="title">我是路行远</h1>
     </header>
     <div id="container">
-      <p class="tagline">我的网站</p>
+      <p class="tagline">这是我的网站2333333</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
