--- a/index.html
+++ b/index.html
@@ -6,34 +6,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
-
-  <style type="text/css">
-    div{
-      width:180px;
-      height:180px;
-      border:1px solid #000;
-      position:relative;
-      display:table-cell;
-      text-align:center;
-      vertical-align:middle;
-    }
-    div p{
-      position:static;
-    +position:absolute;
-      top:50%;
-    }
-    div img{
-      position:static;
-    +position:relative;
-      top:-50%;
-      left:-50%;
-    }
-  </style>
-
-  <title>百度二下，你就知道</title>
+  <link rel="icon" href="aa.ico" type="image/x-icon" /><link rel="shortcut icon" href="aa.ico"><link rel="Bookmark" href="aa.ico">
+  <title>百度一下，你就知道</title>
   <meta name="description" content="我的网站">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -41,10 +19,11 @@
 </head>
 
 <body>
-<div ><img src="images/11.png" /></div>
-<div><p><img src="images/11.png" width="120" height="120"></p></div><br>
-<div><p><img src="images/11.png" width="160" height="160"></p></div>
 
-  
+<div class="wrapper">
+  <header>
+   <center><img src="images/11.png" width="233" height="66" ></center>
+  </header>
+<div><input type="text" width="450" height="33"></div>
 </body>
 </html>
