--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 
 </head>
 
-<body>
+<body style="background:#fff">
 
 <div class="wrapper">
   <header>
-   <center><img src="images/11.png" width="233" height="66" ></center>
+   <center><img src="images/11.png" width="233" height="120" ></center>
   </header>
-<div><input type="text" width="450" height="33"></div>
+  <div>
+    <div style=float:left;margin-bottom:2px;><input type="text" style="width: 450px;height: 30px"></div>
+    <a href="https://www.baidu.com/">
+    <div style=float:left;margin-bottom:2px;><input type="button" value="百度一下"  style="width:100px;height: 35px;background-color: blue;border: none;color: white"></div>
+    </a>
+  </div>
 </body>
 </html>
