--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div>
     <div style=float:left;margin-bottom:2px;><input type="text" style="width: 450px;height: 30px"></div>
     <a href="https://www.baidu.com/">
-    <div style=float:left;margin-bottom:2px;><input type="button" value="百度一下"  style="width:100px;height: 35px;background-color: blue;border: none;color: white"></div>
+    <div style="float:left;margin-bottom:2px;"><input type="button" value="百度一下"  style="width:100px;height: 35px;background-color: blue;border: none;color: white"></div>
     </a>
   </div>
 </body>
