--- a/index.html
+++ b/index.html
@@ -1,34 +1,3 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
-  <link rel="icon" href="aa.ico" type="image/x-icon" /><link rel="shortcut icon" href="aa.ico"><link rel="Bookmark" href="aa.ico">
-  <title>百度一下，你就知道</title>
-  <meta name="description" content="我的网站">
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-</head>
-
-<body style="background:#fff">
-
-<div class="wrapper">
-  <header>
-   <center><img src="images/11.png" width="233" height="120" ></center>
-  </header>
-  <div>
-    <div style=float:left;margin-bottom:2px;><input type="text" style="width: 450px;height: 30px"></div>
-    <a href="https://www.baidu.com/">
-    <div style="float:left;margin-bottom:2px;"><input type="button" value="百度一下"  style="width:100px;height: 35px;background-color: blue;border: none;color: white"></div>
-    </a>
-  </div>
-</body>
-</html>
+---
+layout: resume
+---
