--- a/index.html
+++ b/index.html
@@ -3,3 +3,13 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
             <title>哔哩哔哩弹幕视频网 - ( ゜- ゜)つロ  乾杯~  - bilibili</title>
+  </head>
+  <body>
+    <div id="header"></div>
+  <ul id="nav">
+  <li><a href="http://www.bilibili.com/">首 页</a></li>
+  <li><a href="http://bangumi.bilibili.com/22/">番剧</a></li>
+  <li><a href="http://www.bilibili.com/video/music.html">音乐</a></li>
+  <li><a href="http://www.bilibili.com/video/dance.html">舞蹈</a></li>
+  <li><a href="http://www.bilibili.com/video/kichiku.html">鬼畜</a></li>
+  <li><a href="http://www.bilibili.com/video/game.html">游戏</a></li>
